--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html
@@ -34,32 +34,32 @@
         <h2>Modules</h2>
         <div id="links-container">
             <section>
-                /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6FamousMelodies.html
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html">
+
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/1.png" alt="Counrty Waltz">
                     <span>Bossa Nova</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6ClassicRock.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/2.png" alt="Dreamy">
                     <span>Classic Rock</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6/M6Funk.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Funk.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/3.png" alt="Jazz Guitar Trio">
                     <span>Funk</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6/M6Pop.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Pop.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/4.png" alt="Strumming Guitars">
                     <span>Pop</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/M6/M6FamousMelodies.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6FamousMelodies.html">
                     <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/afbeeldingen/5.png" alt="Strumming Guitars">
                     <span>Famous Melodies</span>
                 </a>
