--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Dreamy.html
@@ -10,15 +10,18 @@
 </head>
 <body>
     <header>
-        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html">
+        <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/index.html">
 
-            <h1>Module 5</h1>
+            <h1>Feel the Chords</h1>
         </a>
         <nav>
             <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining/index.html">Ear Training</a>
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M5/M5Index.html">
+            <h1>Module 5</h1>
+        </a>
     </header>
     <main>
         <section id='steezy'>
