--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Pop.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Pop.html
@@ -16,6 +16,9 @@
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html">
+            <h1>Module 6</h1>
+        </a>
     </header>
     <main>
         <section id='steezy'>
