--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Funk.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Funk.html
@@ -19,6 +19,9 @@
             <a href="https://thomastooten.github.io/JPRSite/Main index/Blues Training/index.html">Blues Training</a>
             <a href="https://integerbook.herokuapp.com">Leadsheets IRF</a>
         </nav>
+        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Index.html">
+            <h1>Module 6</h1>
+        </a>
     </header>
     <main>
         <section id='steezy'>
@@ -27,54 +30,54 @@
         <section id="steezy">
             <h2>1 - 5 - 5 - 1</h2>
         </section>
-
+        /Users/thomastooten/Documents/GitHub/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of A).mp3
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 5, 5, 1 - Funk/Chords 1, 5, 5, 1 - Funk (key of Gb).mp3"></audio>
         </div>
        
     
