--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6FamousMelodies.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6FamousMelodies.html
@@ -30,26 +30,25 @@
         <section id="steezy">
             <h2>Choose one melody and add chords to it (from your memory)</h2>
         </section>
-
         <div class="lesson-block">
             <p>Auld Lang Syne (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Auld Lang Syne (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Auld Lang Syne (C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>Blowin' in the Wind (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/eartrainiFamous Melodies  - Choose one melody and add chords to it (from your memory)/Blowin' in the Wind (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Blowin' in the Wind (C).mp3"></audio>
         </div>    <div class="lesson-block">
             <p>Happy Birthday (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Happy Birthday (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Happy Birthday (C).mp3"></audio>
         </div>    <div class="lesson-block">
             <p>My Bonnie Lies Over the Ocean (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Famous Melodies  - Choose one melody and add chords to it (from your memory)/My Bonnie Lies Over the Ocean (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/My Bonnie Lies Over the Ocean (C).mp3"></audio>
         </div>    <div class="lesson-block">
             <p>Twinkle Twinke Little Star (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Twinkle Twinke Little Star (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/Twinkle Twinke Little Star (C).mp3"></audio>
         </div>    <div class="lesson-block">
             <p>When the Saints Go Marchin' In (C)</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Famous Melodies  - Choose one melody and add chords to it (from your memory)/When the Saints Go Marchin' In (C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Famous Melodies  - Choose one melody and add chords to it (from your memory)/When the Saints Go Marchin' In (C).mp3"></audio>
         </div>
        
 
