--- a/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Pop.html
+++ b/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/M6Pop.html
@@ -30,51 +30,51 @@
 
         <div class="lesson-block">
             <p>key of A</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of A).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of A).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Ab</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Ab).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Ab).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of B</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of B).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of B).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Bb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Bb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Bb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of C</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of C).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of C).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of D</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of D).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of D).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Db</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Db).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Db).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of E</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of E).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of E).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Eb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Eb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Eb).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of F</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of F).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of F).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of G</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of G).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of G).mp3"></audio>
         </div>
         <div class="lesson-block">
             <p>key of Gb</p>
-            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/FeelTheNumbers_FeelTheChords/Audio/Lesson6/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Gb).mp3"></audio>
+            <audio controls controlslist="nodownload" src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Feel the Chords/FeelTheNumbers_FeelTheChords/M6/audio/Chords 1, 4, 5, 1 - Pop/Chords 1, 4, 5, 1 - Pop (key of Gb).mp3"></audio>
         </div>
       
        
